@@ -8,3 +8,4 @@ SMN?05		Another Super Mario Bros. Wii
 SMN?06		Newer Summer Sun
 SMN?07		Newer Holiday Special
 SMN?08		Epic Super Bowser World
+SMN?09		Koopa Country
