@@ -13,12 +13,14 @@ own the original, you can't blame me. patchimage is 100% legal, as it
 does not contain any propritary contents, nor is able to grab them.
 
 Supported Games
-* Newer SMBW (riivolution)
-* Cannon SMBW (riivolution)
-* Another SMBW (riivolution)
-* Newer Summer Sun (riivolution)
-* Newer Holiday Special (riivolution)
-* Epic Super Bower World (riivolution)
+* Newer SMBW (riivolution) [SMN?03]
+* Cannon SMBW (riivolution) [SMN?04]
+  [support for Cannon is untested, as I couldn't grab the files]
+* Another SMBW (riivolution) [SMN?05]
+* Newer Summer Sun (riivolution) [SMN?06]
+* Newer Holiday Special (riivolution) [SMN?07]
+* Epic Super Bower World (riivolution) [SMN?08]
+* Koopa Country (riivolution) [SMN?09]
 * The Legend of Zelda: Parallel Worlds (ips)
 
 Default Searchpaths:
